--- a/template.html
+++ b/template.html
@@ -6,16 +6,51 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="header">
+  <section id="whole-wrapper">
+    <section id="top">
+      <section id="header">
+        <h1>kangho BLOG</h1>
+      </section>
+  
+      <section id="nav">
+        <ul>
+          <li>Home</li>
+          <li>Web</li>
+          <li>Game</li>
+          <li>School</li>
+        </ul>
+      </section>
+    </section>
+    
+    <section id="mid">
+      <section id="body">
+        <aside id="sidebar">
+          <ul>
+            <li>Home</li>
+            <li>Web</li>
+            <li>Game</li>
+            <li>School</li>
+          </ul>
+        </aside>
+        <section id="content">
+          <div> title</div>
+          <article id="article">
+            Game
+          </article>
+        </section>
+      </section>
+    </section>
+  
+    <section id="bot">
+      <section id="footer">
+        <footer>copyright?</footer>
+      </section>
+    </section>
+    
+  </section>
+  <section id="background-wrapper">
 
   </section>
   
-  <section id="body">
-
-  </section>
-
-  <section id="footer">
-
-  </section>
 </body>
 </html>
